2013-06-12  Ramon Casero  <rcasero@gmail.com>

	* CMakeLists.txt: (0.3.1)

	- Add Windows-specific syntax to build the Boost libraries.

2013-06-11  Ramon Casero  <rcasero@gmail.com>

	* CMakeLists.txt: (0.3.0)
	* matlab/CMakeLists.txt: (0.3.0)
	* matlab/ItkToolbox/CMakeLists.txt: (0.6.0)
	* matlab/CgalToolbox/CMakeLists.txt: (0.2.2)
	* cpp/src/CMakeLists.txt: (0.3.0)
	* cpp/src/third-party/mba/CMakeLists.txt: (0.1.3)
	* Delete include/boost:

	- Quite big change in the CMake build system. Now Boost libraries
	are built as an external project. Attempts to integrate the build
	and install more closely with the Gerardus CMake build system have
	proven unsuccessful, in part because without using
	FindBoost.cmake, the linker gets confused between the local Boost
	and any system-wide installed Boost, and FindBoost.cmake runs in
	the configuration phase, before ExternalProject_Add() has the
	chance to build Boost.

	- The CMake configuration of some third party libraries, like the
	GMP and MPFR dependencies of CGAL, as well as the Matlab
	configuration have been moved to the root CMakeLists.txt.

	- Compilation and linking options have been grouped and arranged
	accordingly.

	* Delete cpp/src/third-party/boost-1.50.0:
	* Replace cpp/src/third-party/boost_1_50_0 by
	cpp/src/third-party/boost_1_53_0:

	- Now we are not limited to the older version by rpply, so we may
	as well get the latest one.

	* Add cpp/src/third-party/boost_1_50_0:

	- The rpply version of Boost 1.50.0 is just not going to work with
	Windows without substantial effort. I'm adding the original source
	files, after deleting the doc, test and example directories, to
	try to build boost as an external project.

2013-06-06  Ramon Casero  <rcasero@gmail.com>

	* cpp/src/CMakeLists.txt: (0.2.7)

	- I commited the change without this comment or increasing the
	version number. The include_directories and link_directories for
	the boost libraries have to go before the add_subdirectory. This